# aion-sdk

./: .coverage  LICENSE  README.md  pyproject.toml
skills/: skill.md
src/aion_sdk/: __init__.py  client.py
src/aion_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/aionmarket_sdk/: __init__.py  client.py
src/aionmarket_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_aiagent_contract.py  test_client.py
