[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-sdk"
version = "0.4.0"
description = "Python SDK for AI Agent trading on prediction markets (Polymarket MVP)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "AION Market", email = "support@aionmarket.com" }
]
keywords = [
  "polymarket",
  "prediction-markets",
  "trading",
  "ai-agent",
  "sdk"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = []
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "isort>=5.12",
  "mypy>=1.0",
  "flake8>=6.0",
]


[project.urls]
Homepage = "https://github.com/aionmarket/aion-sdk"
Repository = "https://github.com/aionmarket/aion-sdk"
Documentation = "https://docs.aionmarket.com"
Issues = "https://github.com/aionmarket/aion-sdk/issues"
[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]
include = ["aion_sdk*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
py_version = 39

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/aion_sdk --cov-report=term-missing"
